--- a/css/sp.css
+++ b/css/sp.css
@@ -18,6 +18,9 @@
 .depict-check-disabled{ background-position: 0 -284px; width: 16px; height: 14px; }
 .depict-load{ background-position: 0 -318px; width: 45px; height: 45px; }
 .depict-load-h{ background-position: 0 -383px; width: 45px; height: 45px; }
+.depict-pin{ background-position: 0 -448px; width: 24px; height: 30px; }
+.depict-pin-h{ background-position: 0 -498px; width: 24px; height: 30px; }
+
 
 
 /*icons end*/
