--- a/css/sp.css
+++ b/css/sp.css
@@ -20,8 +20,8 @@
 .depict-load-h{ background-position: 0 -383px; width: 45px; height: 45px; }
 .depict-pin{ background-position: 0 -448px; width: 24px; height: 30px; }
 .depict-pin-h{ background-position: 0 -498px; width: 24px; height: 30px; }
-
-
+.depict-close{ background-position: 0 -548px; width: 20px; height: 20px; }
+.depict-close-h{ background-position: 0 -588px; width: 20px; height: 20px; }
 
 /*icons end*/
 
