--- a/css/all.css
+++ b/css/all.css
@@ -2170,15 +2170,31 @@ a.news__inner:hover .news__title{
 	overflow: hidden;
 	height: 100vh;
 	min-height: 955px;
-	padding: 100px 80px;
+	padding: 248px 120px 100px;
 	box-sizing: border-box;
+	background: #fff;
 }
-.locate__holder{
+.locate-tabs{
 	position: relative;
-	max-width: 800px;
 	padding-right: 80px;
-	margin: 0 auto;
 	box-sizing: border-box;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
+	visibility: visible;
+	will-change: transform, opacity, visibility;
+	-webkit-transition-property: -webkit-transform, opacity, visibility;
+	transition-property: -webkit-transform, opacity, visibility;
+	-webkit-transition-duration: 1s;
+	transition-duration: 1s;
+}
+.locate-tabs.hide{
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
+	opacity: 0;
+	visibility: hidden;
 }
 
 .local-map{
@@ -2188,11 +2204,21 @@ a.news__inner:hover .news__title{
 	width: 100%;
 	height: 100%;
 	background: #303030;
-	z-index: 99;
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
 	opacity: 0;
 	visibility: hidden;
+	will-change: transform, opacity, visibility;
+	-webkit-transition-property: -webkit-transform, opacity, visibility;
+	transition-property: -webkit-transform, opacity, visibility;
+	-webkit-transition-duration: 1s;
+	transition-duration: 1s;
 }
 .local-map.active{
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 	opacity: 1;
 	visibility: visible;
 }
@@ -2203,19 +2229,25 @@ a.news__inner:hover .news__title{
 	bottom: 0;
 	left: 0;
 	right: 0;
-	opacity: 0;
 	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
+	background: no-repeat center center;
 	-webkit-transform: scale(1.2);
 	-ms-transform: scale(1.2);
 	transform: scale(1.2);
-	-webkit-transition: all 1s ease;
-	transition: all 1s ease;
-	will-change: transform, opacity;
+	opacity: 0;
+	visibility: hidden;
+	will-change: transform, opacity, visibility;
+	-webkit-transition-property: -webkit-transform, opacity, visibility;
+	transition-property: -webkit-transform, opacity, visibility;
+	-webkit-transition-duration: 1s;
+	transition-duration: 1s;
 }
 .locate-bg__item.active{
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 	opacity: 1;
+	visibility: visible;
 }
 .locate-bg__item:after{
 	content: '';
@@ -2233,60 +2265,51 @@ a.news__inner:hover .news__title{
 	background: url(../img/bg-locate-overlay.png) no-repeat 50% 50%;
 }
 
-.locate-controls,
-.user-content .locate-controls{
-	list-style: none;
-	padding: 0 0 88px;
-	/*padding: 0 0 9vh;*/
-	margin: 0;
+.locate-controls{
+	position: absolute;
+	left: 120px;
+	top: 100px;
 	overflow: hidden;
 	font-family: 'rotondac-bold', Arial, Helvetica, sans-serif;
 	font-size: 24px;
 	line-height: 30px;
 }
-.locate-controls li,
-.user-content .locate-controls li,
-.user-content .locate-controls li:first-child{
-	padding: 0;
-	float: left;
-}
-.user-content .locate-controls li:before,
-.user-content .locate-controls li:first-child:before{
-	content: none;
-}
 .locate-controls a{
-	display: block;
+	float: left;
 	text-decoration: none;
 	padding: 15px 40px;
 	background: #fff;
 	color: #00abc7;
+	-webkit-transition-property: color, background;
+	transition-property: color, background;
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 .locate-controls a > span{
 	display: inline-block;
 	line-height: 24px;
 	border-bottom: 1px dotted #00abc7;
-	-webkit-transition-property: border, color;
-	transition-property: border, color;
+	-webkit-transition-property: border;
+	transition-property: border;
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 .locate-controls a:hover > span{
 	border-bottom-color: transparent;
 }
-.locate-controls .active a{
+.locate-controls a.active{
 	background: #00abc7;
 	color: #fff;
 	cursor: default;
 }
-.locate-controls .active a > span{
+.locate-controls a.active > span{
 	border-bottom-color: transparent;
 }
 
-.see-on-map{
+.see-map{
 	position: absolute;
-	right: 0;
-	top: 0;
-}
-.see-on-map a{
-	display: block;
+	right: 120px;
+	top: 100px;
 	width: 66px;
 	height: 66px;
 	border-radius: 50%;
@@ -2294,7 +2317,7 @@ a.news__inner:hover .news__title{
 	background: #fff;
 	will-change: border-radius;
 }
-.see-on-map [class*="depict-"]{
+.see-map [class*="depict-"]{
 	position: absolute;
 	right: 50%;
 	top: 50%;
@@ -2306,12 +2329,29 @@ a.news__inner:hover .news__title{
 	-webkit-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 }
+.see-map [class*="depict-"]:nth-child(1){
+	opacity: 1;
+}
+.see-map [class*="depict-"]:nth-child(2){
+	opacity: 0;
+}
+.see-map:hover [class*="depict-"]:nth-child(1){
+	opacity: 0.8;
+}
+.see-map.active [class*="depict-"]:nth-child(1),
+.see-map.active:hover [class*="depict-"]:nth-child(1){
+	opacity: 0;
+}
+.see-map.active [class*="depict-"]:nth-child(2){
+	opacity: 1;
+}
+.see-map.active:hover [class*="depict-"]:nth-child(2){
+	opacity: 0.8;
+}
+
 .depict-pin .svg{
 	width: 35px;
 	height: 35px;
-}
-.see-on-map a:hover [class*="depict-"]{
-	opacity: 0.8;
 }
 
 .locate-adr{
@@ -2332,15 +2372,25 @@ a.news__inner:hover .news__title{
 	color: #000;
 	width: 100%;
 	margin: 0 0 0 -100%;
-	visibility: hidden;
+
+	-webkit-transform: translateX(-30%);
+	-ms-transform: translateX(-30%);
+	transform: translateX(-30%);
+	-webkit-transition: all 0.7s;
+	transition: all 0.7s;
+	will-change: transform,opacity,visibility;
 	opacity: 0;
+	visibility: hidden;
 }
 .locate-adr__item:first-child{
 	margin-left: 0;
 }
 .locate-adr__item.active{
-	visibility: visible;
 	opacity: 1;
+	visibility: visible;
+	-webkit-transform: translateX(0);
+	-ms-transform: translateX(0);
+	transform: translateX(0);
 }
 
 .locate-cont{
@@ -2363,15 +2413,25 @@ a.news__inner:hover .news__title{
 	margin: 0 0 0 -100%;
 	padding: 0;
 	overflow: hidden;
-	visibility: hidden;
+
+	-webkit-transform: translateX(-30%);
+	-ms-transform: translateX(-30%);
+	transform: translateX(-30%);
+	-webkit-transition: all 0.7s;
+	transition: all 0.7s;
+	will-change: transform,opacity,visibility;
 	opacity: 0;
+	visibility: hidden;
 }
 .locate-cont__item:first-child{
 	margin-left: 0;
 }
 .locate-cont__item.active{
-	visibility: visible;
 	opacity: 1;
+	visibility: visible;
+	-webkit-transform: translateX(0);
+	-ms-transform: translateX(0);
+	transform: translateX(0);
 }
 .locate-cont__item a{
 	color: #000;
