--- a/css/widgets.css
+++ b/css/widgets.css
@@ -3,6 +3,7 @@
 
 	responsive tabs;
 	custom select (ui multiselect);
+	swiper slider;
 */
 
 /*!===========================================
@@ -72,4 +73,11 @@
 /* jquery multiselect core end */
 /*!===========================================
  custom select (ui multiselect) end
+ ============================================*/
+
+/*!===========================================
+ swiper slider
+ ============================================*/
+/*!===========================================
+ swiper slider end
  ============================================*/
