--- a/css/sp.css
+++ b/css/sp.css
@@ -22,6 +22,9 @@
 .depict-pin-h{ background-position: 0 -498px; width: 24px; height: 30px; }
 .depict-close{ background-position: 0 -548px; width: 20px; height: 20px; }
 .depict-close-h{ background-position: 0 -588px; width: 20px; height: 20px; }
+.depict-play{ background-position: 0 -628px; width: 11px; height: 13px; }
+.depict-play-h{ background-position: 0 -661px; width: 11px; height: 13px; }
+
 
 /*icons end*/
 
