--- a/css/all.css
+++ b/css/all.css
@@ -1700,6 +1700,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .buttons{
 	text-align: center;
 	padding: 50px 80px 70px;
+	position: relative;
 }
 /*buttons end*/
 
@@ -1942,20 +1943,33 @@ a.products__inner:hover{
 	background: -webkit-linear-gradient(left,  #3277c6 0%,#07a4e9 100%);
 	background: linear-gradient(to right,  #3277c6 0%,#07a4e9 100%);
 }
-.no-cssgradients .previews__item_lg .previews__img:after{
-	background: #07a4e9 url(../img/gradient-video-slider.png) repeat-y;
-}
 .video-section h2{
 	color: #fff;
 	font-size: 40px;
 	line-height: 50px;
 	text-align: center;
 	padding: 0 0 50px;
+	position: relative;
+	z-index: 2;
 }
+.video-section .buttons{
+	position: relative;
+	z-index: 2;
+}
+
+.video-slider{ position: relative; }
+.video-slider:before,
+.video-slider:after { content: ""; display: table; }
+.video-slider:after { clear: both; }
 .video-slider .swiper-container {
+	float: left;
 	width: 100%;
 	height: auto;
-	overflow: visible;
+	padding: 70px 0;
+	margin: -70px 0;
+}
+.no-cssgradients .previews__item_lg .previews__img:after{
+	background: #07a4e9 url(../img/gradient-video-slider.png) repeat-y;
 }
 .video-slider .swiper-slide {
 	width: 770px;
@@ -1969,9 +1983,6 @@ a.products__inner:hover{
 	height: 0;
 	overflow: hidden;
 	box-shadow: 0 25px 27px transparent;
-	-webkit-perspective: 920px;
-	-moz-perspective: 920px;
-	perspective: 920px;
 	will-change: box-shadow;
 	-webkit-transition-property: box-shadow;
 	transition-property: box-shadow;
@@ -1986,7 +1997,6 @@ a.products__inner:hover{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	display: none;
 }
 .video-slider .swiper-img:after{
 	content: '';
@@ -2033,8 +2043,8 @@ a.products__inner:hover{
 	transition-duration: 0.4s;
 }
 .video-slider .swiper-slide-active .swipe-title{
-	-webkit-transition-delay: 0.6s;
-	transition-delay: 0.6s;
+	/*-webkit-transition-delay: 0.6s;*/
+	/*transition-delay: 0.6s;*/
 	opacity: 1;
 	visibility: visible;
 	-webkit-transform: translateX(0px);
@@ -2094,6 +2104,40 @@ a.products__inner:hover{
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	z-index: 1;
+}
+
+.close-video{
+	position: absolute;
+	right: 30px;
+	top: 30px;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background: rgba(0, 0, 0, 0.35);
+	text-indent: -9999px;
+	overflow: hidden;
+	visibility: hidden;
+	opacity: 0;
+}
+.close-video:before,
+.close-video:after{
+	content: '';
+	position: absolute;
+	left: 6px;
+	top: 50%;
+	height: 0;
+	width: 18px;
+	border-top: 1px solid #fff;
+}
+.close-video:before{
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+.close-video:after{
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 
 .swiper-holder iframe {
