--- a/css/1280.css
+++ b/css/1280.css
@@ -1,1 +1,19 @@
 @media only screen and (max-width: 1279px){}
+/*tabs*/
+.tab-controls li, .user-content .tab-controls li, .user-content .tab-controls li:first-child {
+	font-size: 30px;
+	line-height: 36px;
+}
+.tab-controls a {
+	padding: 5px 22px;
+}
+/*tabs end*/
+
+/*previews*/
+.previews{
+	max-width: 840px;
+}
+.previews__item { width: 33.3%; }
+.previews__item_lg { width: auto; }
+.previews__item:nth-child(2) { display: none; }
+/*previews end*/
