--- a/css/1900.css
+++ b/css/1900.css
@@ -17,14 +17,9 @@
 
 /*footer*/
 /*footer nav*/
-.footer-nav__col{
-	width: 33.28%;
-}
+.footer-nav__col,
 .footer-nav__col.col-lg{
-	width: 66.56%;
-}
-.footer-nav__col.no-space {
-	padding-left: 30px;
+	width: 19.98%;
 }
 /*footer nav end*/
 /*footer end*/
