--- a/css/mq-all.css
+++ b/css/mq-all.css
@@ -1,5 +1,6 @@
 @import url(1900.css) only screen and (max-width:1899px);
 @import url(1280.css) only screen and (max-width:1279px);
+@import url(1600.css) only screen and (max-width:1599px);
 @import url(980.css) only screen and (max-width:979px);
 @import url(768.css) only screen and (max-width:767px);
 @import url(640.css) only screen and (max-width:639px);
