--- a/css/1600.css
+++ b/css/1600.css
@@ -10,12 +10,7 @@
 /*tabs end*/
 
 /*previews*/
-.previews{
-	max-width: 840px;
-}
-.previews__item { width: 33.3%; }
-.previews__item_lg { width: auto; }
-.previews__item:nth-child(2) { display: none; }
+.previews__item:nth-child(1) { display: inline-block; }
 /*previews end*/
 
 /*footer*/
